psp/backendSpring/backendSpring/src/main/java/org/example/backendspring/errors/UserValidationException.java
package org.example.backendspring.errors;

public class UserValidationException extends RuntimeException {
    public UserValidationException(String message) {
        super(message);
    }
}
